--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ a {
     cursor: pointer;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.not-centered {
+    text-align: initial;
+}
+
+h1, h2, h3, h4, h5, h6, p {
     text-align: center;
 }
 
@@ -26,6 +30,30 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+dialog {
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: #0008;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    z-index: 1;
+    gap: 1ch;
+}
+
+dialog div {
+    text-align: center;
+    background:darkred;
+    color: #eee;
+    padding: 1ch;
+    width: 20ch;
+    border-radius: 1ch;
 }
 
 .field {
